--- a/LoanApp/Views/Home/Index.cshtml
+++ b/LoanApp/Views/Home/Index.cshtml
@@ -2,21 +2,21 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model IEnumerable<LoanApp.Models.User>
+@model IEnumerable<LoanApp.Models.Loan>
 <html>
 <head>
     <title>  Loan App </title>
 </head>
 <body>
     <table class="table">
-         <tr><th>Имя</th><th>Возраст</th></tr>
+         <tr><th>Value</th><th>Reason</th></tr>
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Name</td>
-                <td>@item.Phone</td>
+                <td>@item.Value</td>
+                <td>@item.Reason</td>
             </tr>
         }
     </table>
