--- a/LoanApp/Views/Shared/_Layout.cshtml
+++ b/LoanApp/Views/Shared/_Layout.cshtml
@@ -9,11 +9,14 @@
             margin: 15px;
         }
     </style>
+    <title>
+        Loan App
+    </title>
     <body>
         <header>
             <div style="border: 1px solid black">
                 <a>Home</a>
-                <a>Profile</a>
+                <a href="/User/Profile">Profile</a>
                 <a>Search</a>
                 <a href="/Loans/AddLoan">Add loan</a>
             </div>
