some minor changes, add m,issing css and layout

--- a/LoanApp/Views/Shared/_Layout.cshtml
+++ b/LoanApp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div style="border: 1px solid black">
-                <a>Home</a>
+                <a href="/">Home</a>
                 <a href="/User/Profile">Profile</a>
                 <a>Search</a>
                 <a href="/Loans/AddLoan">Add loan</a>
