--- a/LoanApp/Views/Loans/Create.cshtml
+++ b/LoanApp/Views/Loans/Create.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+       Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <html>
     <style>
@@ -12,7 +13,8 @@
              justify-content: center;
              flex-direction: column;
              align-items: center;
-             margin: 20% 35%;
+             margin: auto;
+             margin-top: 10%;
              width:  400px;
              height: 400px;
         }
