general updates with auth, completle done with cookie auth

--- a/LoanApp/Views/Shared/_Layout.cshtml
+++ b/LoanApp/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                 <a href="/User/Profile">Profile</a>
                 <a>Search</a>
                 <a href="/Loans/AddLoan">Add loan</a>
+                <a asp-controller="Auth" asp-action="Logout">Logout</a>
             </div>
         </header>
         <div id="main">
