--- a/LoanApp/Views/Home/Index.cshtml
+++ b/LoanApp/Views/Home/Index.cshtml
@@ -13,12 +13,14 @@
 </head>
 <body>
     <table class="table">
-         <tr><th>@Localizer["Home"]</th><th>@Localizer["Profile"]</th></tr>
+         <tr><th>Value</th><th>Reason</th><th>Whom</th><th>Start date</th></tr>
         @foreach (var item in Model)
         {
             <tr>
                 <td>@item.Value</td>
                 <td>@item.Reason</td>
+                <td>@item.WhomUserId</td>
+                <td>@item.DateOfCreation</td>
             </tr>
         }
     </table>
