--- a/LoanApp/Views/Shared/_Layout.cshtml
+++ b/LoanApp/Views/Shared/_Layout.cshtml
@@ -21,5 +21,6 @@
         </header>
         <div id="main">
             @RenderBody()
-        </div>   </body>
+        </div>  
+    </body>
 </html>
