--- a/LoanApp/Views/User/Search.cshtml
+++ b/LoanApp/Views/User/Search.cshtml
@@ -23,6 +23,26 @@
             margin: 15px 15px;
         }
     </style>
+
+    <script>
+        function addToContactList(userId, name, phone){
+            console.log(userId);
+            fetch('/api/User', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    UserId: userId,
+                    Name: name,
+                    Phone: phone,
+                    ContactList: '-',
+                    Password: '-'
+                })
+            })
+
+        }
+    </script>
     <body>
         <form method="post">
             <div class="search_form">
@@ -34,12 +54,15 @@
                 <input type="submit" value="Найти" class="btn btn-outline-dark" />
             </div>
             <table class="table">
-                 <tr><th>User name</th><th>phone</th></tr>
+                 <tr><th>User name</th><th>phone</th><th></th></tr>
                 @foreach (var user in Model)
                 {
                     <tr>
                         <td>@user.Name</td>
                         <td>@user.Phone</td>
+                        <td>
+                            <input  type="button" value="Add" onclick="addToContactList(@user.UserId,'@user.Name', '@user.Phone')"/>
+                        </td>
                     </tr>
                 }
             </table>
