Add total count of loan

--- a/LoanApp/Views/Home/Index.cshtml
+++ b/LoanApp/Views/Home/Index.cshtml
@@ -23,6 +23,11 @@
                 <td>@item.DateOfCreation</td>
             </tr>
         }
+        <tr>
+            <td>
+                <span style="font-weight: bold">Total: </span> @ViewBag.TotalLoan
+            </td>
+        </tr>
     </table>
 </body>
 </html>
